fix: PR title check cannot run on generic, replacing it with ubuntu-22.04

--- a/.github/workflows/pr_title_check.yml
+++ b/.github/workflows/pr_title_check.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   check_title:
-    runs-on: generic
+    runs-on: ubuntu-22.04
     steps:
       - name: Check out
         uses: actions/checkout@v3
