feat: read mock server from .env

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,10 @@ services:
       context: .
       dockerfile: mock-server/Dockerfile
     restart: unless-stopped
+    env_file:
+      - .env
     ports:
-      - "3000:3000"
-      - "4000:4000"
+      - "${BACKEND_SERVER_PORT}:${BACKEND_SERVER_PORT}"
     networks:
       - server_network
 
