--- a/mock-server/Cargo.toml
+++ b/mock-server/Cargo.toml
@@ -13,3 +13,5 @@ bcrypt = "0.17.0"
 tower-http = { version = "0.6.1", features = ["cors"] }
 utoipa = { version = "5.3.1" }  # Ensure the correct feature is used
 utoipa-swagger-ui = { version = "9", features = ["axum"] }
+dotenv = "0.15.0"
+anyhow = "1.0.98"
