--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,12 +7,24 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "watch": "npm-watch"
+  },
+  "watch": {
+    "build": {
+      "patterns": [
+        "src"
+      ],
+      "extensions": "ts,tsx,js,css",
+      "run": "tsc -b"
+    }
   },
   "dependencies": {
+    "npm-watch": "^0.13.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.3",
+    "websocket": "^1.0.35",
     "zod": "^3.24.4"
   },
   "devDependencies": {
@@ -26,9 +38,9 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "loglevel": "^1.9.2",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
-    "vite": "^6.3.5",
-    "loglevel": "^1.9.2"
+    "vite": "^6.3.5"
   }
 }
