feat: implemented forms validation, changed sendData logic, unified api calls

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,7 +25,8 @@
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.3",
     "websocket": "^1.0.35",
-    "zod": "^3.24.4"
+    "zod": "^3.24.4",
+    "@hookform/resolvers": "^5.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
