feat: add Makefile to authentification

--- a/authentication-server/CMakeLists.txt
+++ b/authentication-server/CMakeLists.txt
@@ -1,9 +1,8 @@
-cmake_minimum_required(VERSION 3.10)  # Используй минимум 3.10 или выше
+cmake_minimum_required(VERSION 3.10)
+project(authentication_server C)
 
-project(myprogram C)  # Проект на чистом C
+set(CMAKE_C_STANDARD 11)
 
-set(CMAKE_C_STANDARD 11)  # Укажи стандарт C
-set(CMAKE_C_STANDARD_REQUIRED ON)
-
-# Укажи исходный файл (относительно корня проекта)
-add_executable(authentication_server src/main.c)
+add_executable(authentication_server
+    main.c
+)
