--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,9 @@
     "react-hook-form": "^7.56.3",
     "websocket": "^1.0.35",
     "zod": "^3.24.4",
-    "@hookform/resolvers": "^5.0.1"
+    "@hookform/resolvers": "^5.0.1",
+    "redux": "^5.0.1",
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
@@ -42,6 +44,7 @@
     "loglevel": "^1.9.2",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
-    "vite": "^6.3.5"
+    "vite": "^6.3.5",
+    "@reduxjs/toolkit": "^2.8.2"
   }
 }
